--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Slot Machine</title>
 
   <link rel="stylesheet" href="./assets/css/index.css">
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/index.js" defer></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
       <div class="footer">
         <span class="balance-box">
-          $<span id="balance">0.00</span>
+          $<span id="balance"></span>
         </span>
         <button id="spin-button" class="spin-button">Spin</button>
       </div>
